Auto-launch vlc on startup
